kafka/stage/mirrormaker2-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirrormaker2
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mirrormaker2-pod
  template:
    metadata:
      labels:
        app: mirrormaker2-pod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: lke.linode.com/pool-id
                operator: In
                values: 
                  - "${POOL_ID}"

      containers:
      - name: ubuntu-container
        image: 123456devops/mirrorpod:v2
        command: ["/bin/bash", "-c"]
        args:
        - "while true; do sleep 3600; done"
        volumeMounts:
        - name: data-volume
          mountPath: /home/ubuntu/kafka  
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: mirrormaker2-pvc
